alterando instagram para whatsapp

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/matheusincamillo/" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/matheusincamillo/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://wa.me/5521967439094" target="_blank"><i class="fab fa-fw fa-whatsapp"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/mcamillofernandes/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/mcamillosf" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                     </div>
