alterando texto abaixo do meu nome

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Software Engineer</p>
+                <p class="masthead-subheading font-weight-light mb-0">Full Stack Developer</p>
+                <p class="descrip font-weight-light mb-0">JavaScript - ReactJS - NodeJS - MySQL - MongoDB</p>
             </div>
         </header>
         <!-- Portfolio Section-->
