alterando a mensagem de erro caso email fique em branco

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                             </div>
                             <!-- Email address input-->
-                            <div class="form-floating mb-3">
+                            <div id="divEmail" class="form-floating mb-3">
                                 <input class="form-control" id="email" type="email" placeholder="name@example.com" name="user_email" />
                                 <label for="email">Email address</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
