alterando ortografia da página

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">My name is Matheus Camillo. I'm 25 years old direct from Rio de Janeiro - Brazil. I'm passionate about Technologies, Games, Superheroes, Animes and Series.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">I'm, currently, student of web development full-stack at <a href="https://www.betrybe.com/" target="_blank" class="trybe">Trybe</a>.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">I'm currently student of web development full-stack at <a href="https://www.betrybe.com/" target="_blank" class="trybe">Trybe</a>.</p></div>
                 </div>
             </div>
         </section>
@@ -267,7 +267,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <a href="https://mcamillosf.github.io/pixel-art/" target="_blank"><img class="img-fluid rounded mb-5" src="assets/images/Color-pallet.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is one of many projects that I've built in the course that I'm doing. In this project you can create a box with a max 50x50 to paint with full randomized color. You can check out the project clicking on the image.</p>
+                                    <p class="mb-4">This is one of the many projects that I've built in the course that I'm doing. In this project you can create a box with a max 50x50 to paint with full randomized color. You can check out the project clicking on the image.</p>
                                     <!-- <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -299,7 +299,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <a href="https://mcamillosf.github.io/to-do-list/" target="_blank"><img class="img-fluid rounded mb-5" src="assets/images/To-do-List.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is one of many projects that I've built in the course that I'm doing. In this project you can manage all of your tasks freely. You can check out the project clicking on the image.</p>
+                                    <p class="mb-4">This is one of the many projects that I've built in the course that I'm doing. In this project you can manage all of your tasks freely. You can check out the project clicking on the image.</p>
                                     <!-- <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -331,7 +331,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <a href="https://mcamillosf.github.io/trybewarts/" target="_blank"><img class="img-fluid rounded mb-5" src="assets/images/Trybewarts.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is one of many projects that I've built in the course that I'm doing. This was the first project that I had to work with colleagues. We learn a lot about how to work as a team. You can check out the project clicking on the image.</p>
+                                    <p class="mb-4">This is one of the many projects that I've built in the course that I'm doing. This was the first project that I had to work with colleagues. We learn a lot about how to work as a team. You can check out the project clicking on the image.</p>
                                     <!-- <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -363,7 +363,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <a href="https://mcamillosf.github.io/trybewallet/#/" target="_blank"><img class="img-fluid rounded mb-5" src="assets/images/Wallet.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is one of many projects that I've built in the course that I'm doing. In this project i had to create a wallet that can calculate the costs of my expenses using an external API. You can check out the project clicking on the image.</p>
+                                    <p class="mb-4">This is one of the many projects that I've built in the course that I'm doing. In this project i had to create a wallet that can calculate the costs of my expenses using an external API. You can check out the project clicking on the image.</p>
                                     <!-- <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -395,7 +395,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <a href="https://mcamillosf.github.io/ShoppingCart/" target="_blank"><img class="img-fluid rounded mb-5" src="assets/images/ShoppingCart.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is one of many projects that I've built in the course that I'm doing. In this project I had to create a page where simulates a store, using an external API (MercadoLivre) as the source of the list. You can check out the project clicking on the image.</p>
+                                    <p class="mb-4">This is one of the many projects that I've built in the course that I'm doing. In this project I had to create a page where simulates a store, using an external API (MercadoLivre) as the source of the list. You can check out the project clicking on the image.</p>
                                     <!-- <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -427,7 +427,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <a href="https://mcamillosf.github.io/recipes-app/#/" target="_blank"><img class="img-fluid rounded mb-5" src="assets/images/Recipes-App.jpg" alt="..." /></a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is one of many projects that I've built in the course that I'm doing. In this project I work with a team of five colleagues and we had to build an App for Mobile where you can search for recipes and do it at home. We used an external API from <a href="https://www.themealdb.com/api.php">TheMealDB</a>. You can check out the project clicking on the image.</p>
+                                    <p class="mb-4">This is one of the many projects that I've built in the course that I'm doing. In this project I work with a team of five colleagues and we had to build an App for Mobile where you can search for recipes and do it at home. We used an external API from <a href="https://www.themealdb.com/api.php">TheMealDB</a>. You can check out the project clicking on the image.</p>
                                     <!-- <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
