inserindo docker nas compentencias

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Full Stack Developer</p>
-                <p class="descrip font-weight-light mb-0">JavaScript - ReactJS - NodeJS - MySQL - MongoDB</p>
+                <p class="descrip font-weight-light mb-0">JavaScript - ReactJS - NodeJS - Docker - MySQL - MongoDB</p>
             </div>
         </header>
         <!-- Portfolio Section-->
