--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                     </ul>
+                    <div class="bg-light"></div>
                 </div>
             </div>
         </nav>
@@ -71,7 +72,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Full Stack Developer</p>
-                <p class="descrip font-weight-light mb-0">JavaScript - ReactJS - NodeJS - Docker - MySQL - MongoDB</p>
+                <p class="descrip font-weight-light mb-0">JavaScript - ReactJS - NodeJS - Docker - MySQL - MongoDB - TypeScript</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -81,9 +82,9 @@
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-line divider-black"></div>
+                    <div class="divider-custom-icon divider-black"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line divider-black"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
@@ -169,41 +170,41 @@
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-line divider-black"></div>
+                    <div class="divider-custom-icon divider-black"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line divider-black"></div>
                 </div>
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
-                        <form id="contactForm">
+                        <form class="formContact" id="contactForm">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." name="user_name" />
-                                <label for="name">Full name</label>
+                                <input class="form-control bg-form" id="name" type="text" placeholder="Enter your name..." name="user_name" />
+                                <label class="textForm" for="name">Full name</label>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                             </div>
                             <!-- Email address input-->
                             <div id="divEmail" class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" name="user_email" />
-                                <label for="email">Email address</label>
+                                <input class="form-control bg-form" id="email" type="email" placeholder="name@example.com" name="user_email" />
+                                <label class="textForm" for="email">Email address</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                             </div>
                             <!-- Phone number input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" name="contact_number" />
-                                <label for="phone">Phone number</label>
+                                <input class="form-control bg-form" id="phone" type="tel" placeholder="(123) 456-7890" name="contact_number" />
+                                <label class="textForm" for="phone">Phone number</label>
                                 <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" name="message"></textarea>
-                                <label for="message">Message</label>
+                                <textarea class="form-control bg-form" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" name="message"></textarea>
+                                <label class="textForm" for="message">Message</label>
                                 <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
                             </div>
                             <!-- Submit Button-->
-                            <input type="submit" class="btn btn-primary btn-xl" id="submit-form" value="Send">
+                            <input type="submit" class="btn btn-primary btn-xl send-light" id="submit-form" value="Send">
                         </form>
                     </div>
                 </div>
